[JAVA-34980] Enable-JDK-12-13-and-above-based-projects